Better about content

--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 title: Rob Harrop
 email: rob.harrop@gmail.com
 description: >
-  Rob Harrop, CTO @ <a href="http://www.skipjaq.com">Skipjaq</a>.
-  Writing about coding, maths, distributed systems, performance 
-  optimisation and machine learning.
+  Rob Harrop, CTO @ Skipjaq.
+  Writing about coding, maths, distributed systems, performance
+  optimisation and machine learning
 baseurl: ""
 url: "http://robharrop.github.io"
 twitter_username: robertharrop
