--- a/_config.yml
+++ b/_config.yml
@@ -8,16 +8,13 @@ description: >
 baseurl: ""
 url: "http://robharrop.github.io"
 date_format: "%b %-d, %Y"
+enable_mathjax: true
 
 # Social settings
 show_social_icons: true
 twitter_username: robertharrop
 github_username:  robharrop
 
-# Text
-text:
-  index:
-    coming_soon: Coming soon!
 
 # Build settings
 markdown: kramdown
