--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ enable_mathjax: true
 show_social_icons: true
 twitter_username: robertharrop
 github_username:  robharrop
+disqus_shortname: robharrop
 
 
 # Build settings
