Enable Google Analytics

--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ show_social_icons: true
 twitter_username: robertharrop
 github_username:  robharrop
 disqus_shortname: robharrop
+google_analytics: UA-74112933-1
 
 
 # Build settings
